--- a/src/main/webapp/app/modules/home/home.scss
+++ b/src/main/webapp/app/modules/home/home.scss
@@ -1,10 +1,10 @@
 /* ==========================================================================
 Main page styles
 ========================================================================== */
-.hipster {
+.runner {
   display: inline-block;
   width: 100%;
-  height: 497px;
-  background: url('../../../content/images/jhipster_family_member_1.svg') no-repeat center top;
+  height: 400px;
+  background: url('../../../content/images/home_bg.png') no-repeat center top;
   background-size: contain;
 }
