update filter, logo, pageHeader, fix minor bugs

--- a/src/main/webapp/app/shared/layout/sidebar/sidebar.scss
+++ b/src/main/webapp/app/shared/layout/sidebar/sidebar.scss
@@ -1,16 +1,16 @@
 $header-color: white;
 $header-color-secondary: gray;
-$header-color-hover: darken($header-color, 20%);
+$header-color-hover: darken($header-color, 100%);
 
-.brand{
+.brand {
   &:hover {
     cursor: default;
   }
 
   .brand-icon {
-    margin: 5px;
+    margin-top: 5px;
     img {
-      height: 20px;
+      height: 40px;
     }
   }
 
@@ -43,4 +43,8 @@ $header-color-hover: darken($header-color, 20%);
   .anticon {
     line-height: 25px;
   }
+}
+
+.ant-menu-item-selected {
+  background-color: darkorange !important;
 }
