--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -52,6 +52,10 @@ a {
   padding: 5px 25px 50px 25px !important;
 }
 
+.ant-page-header-heading-title {
+  white-space: normal;
+}
+
 //!* ==========================================================================
 //Browser Upgrade Prompt
 //========================================================================== *!
