update admin pages

--- a/src/main/webapp/app/shared/layout/sidebar/sidebar.scss
+++ b/src/main/webapp/app/shared/layout/sidebar/sidebar.scss
@@ -1,4 +1,4 @@
-$header-color: white;
+$header-color: whitesmoke;
 $header-color-secondary: gray;
 $header-color-hover: darken($header-color, 100%);
 
@@ -10,14 +10,17 @@ $header-color-hover: darken($header-color, 100%);
   .brand-icon {
     margin-top: 5px;
     img {
-      height: 40px;
+      height: 50px;
     }
   }
 
   .brand-title {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
     color: $header-color;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
